--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -3759,12 +3759,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a1ab22f-8c43-499b-a489-9a68e422a7b0",
+   "metadata": {},
+   "source": [
+    "#### Setup different Run Methods:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d3b733de-85f2-4e6a-925a-ba5ac2558732",
    "metadata": {},
    "source": [
-    "#### run4(): - \"GeneralHealth\",\"Type\"\n",
-    "#### run5 =    \"income\",type\n",
-    "#### run6 =   \"Education\",\"Type\""
+    "run4(): - \"GeneralHealth\",\"Type\",   run5 =    \"income\",type, run6 =   \"Education\",\"Type\""
    ]
   },
   {
@@ -4131,13 +4137,382 @@
    "id": "2d0bcdec-852e-4ce4-b9b0-c981f37923c4",
    "metadata": {},
    "source": [
-    "## Lastly, create *.py file and add all my functions"
+    "### Testing my class\n",
+    "Lastly, create prepare.py file and add all my functions\n",
+    "Better to view py file in pycharm so you done mess up the formatting incase you have to make changes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "edc704fe-e341-46d0-9c20-34d68ae4dc60",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from prepare import PrepareData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483529ed-192a-4e21-a25f-e1c414200590",
+   "metadata": {},
+   "source": [
+    "### Testing reading local data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d06f6ae9-8ff9-48db-90d6-789514b39afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Testing - Read local data\n",
+    "prepare_data = PrepareData(download_new=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "27e2b5ec-ce87-4cf3-90c6-a6dc045db5f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#will return these dataframe already cleaned and transformed\n",
+    "# 'menhealth','menhealth','physical','dietary','heart','sex','edu','all' \n",
+    "data = prepare_data.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "59450e64-8743-4786-aa7a-1e6ce62923b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diabetes_binary</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>5</td>\n",
+       "      <td>women</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>men</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>diabetic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>men</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>diabetic</td>\n",
+       "      <td>15</td>\n",
+       "      <td>men</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>men</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Diabetes_binary         Type  MentHlth Gender\n",
+       "0                0  nondiabetic         5  women\n",
+       "1                0  nondiabetic        25    men\n",
+       "2                1     diabetic         0    men\n",
+       "3                1     diabetic        15    men\n",
+       "4                0  nondiabetic         0    men"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['menhealth'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e052edd8-f9c3-4c81-94c4-85719a7b5343",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Diabetes_binary</th>\n",
+       "      <th>HighBP</th>\n",
+       "      <th>HighChol</th>\n",
+       "      <th>CholCheck</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Stroke</th>\n",
+       "      <th>HeartDiseaseorAttack</th>\n",
+       "      <th>PhysActivity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Types</th>\n",
+       "      <th>GeneralHealth</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>income</th>\n",
+       "      <th>education</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>215265</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>men</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>&lt;10K</td>\n",
+       "      <td>12orGED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>141614</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>women</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>&lt;10K</td>\n",
+       "      <td>12orGED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>men</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>Very good</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>&lt;10K</td>\n",
+       "      <td>1-8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>123066</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>men</td>\n",
+       "      <td>diabetics</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>diabetic</td>\n",
+       "      <td>&lt;10K</td>\n",
+       "      <td>9-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36247</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>women</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>nondiabetic</td>\n",
+       "      <td>&lt;10K</td>\n",
+       "      <td>C4+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID  Diabetes_binary  HighBP  HighChol  CholCheck  BMI  Smoker  Stroke  \\\n",
+       "0  215265                0       0         1          0   30       1       0   \n",
+       "1  141614                0       0         0          1   35       1       0   \n",
+       "2   28979                0       0         0          1   25       0       0   \n",
+       "3  123066                1       0         1          1   45       0       0   \n",
+       "4   36247                0       0         0          1   28       0       0   \n",
+       "\n",
+       "   HeartDiseaseorAttack  PhysActivity  ...  Sex  Age  Education  Income  \\\n",
+       "0                     0             1  ...    0    3          4       1   \n",
+       "1                     0             1  ...    1    7          4       1   \n",
+       "2                     0             1  ...    0   10          2       1   \n",
+       "3                     0             0  ...    0    4          3       1   \n",
+       "4                     0             1  ...    1   13          6       1   \n",
+       "\n",
+       "   Gender        Types  GeneralHealth         Type  income  education  \n",
+       "0     men  nondiabetic           Good  nondiabetic    <10K    12orGED  \n",
+       "1   women  nondiabetic      Excellent  nondiabetic    <10K    12orGED  \n",
+       "2     men  nondiabetic      Very good  nondiabetic    <10K        1-8  \n",
+       "3     men    diabetics           Fair     diabetic    <10K       9-11  \n",
+       "4   women  nondiabetic           Good  nondiabetic    <10K        C4+  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['all'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cf3739b0-a75f-4ae6-8735-2414ea140ccf",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(253680, 29)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " data['all'].shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc704fe-e341-46d0-9c20-34d68ae4dc60",
+   "id": "18ada9e2-0451-47c2-ac71-fbdec7bccfa1",
    "metadata": {},
    "outputs": [],
    "source": []
