--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -9,23 +9,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e48e563f",
+   "cell_type": "markdown",
+   "id": "46786b5d-76cc-4c43-b847-7b9d72d55682",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# model & metric imports\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Specific imports\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# These are new! Notice we're using the 'from' approach to import only what we need.\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LinearRegression\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m metrics\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -84,30 +70,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5790eebe-4169-4d0e-beac-48ca8c24a70a",
+   "execution_count": 1,
+   "id": "2fec02fb-8aef-456b-bd1e-e8af544cc3fe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standard data science imports\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "DOWNLOAD_URL = (\n",
-    "    \"https://archive.ics.uci.edu/static/public/891/data.csv\"\n",
-    ")"
+    "# model & metric imports\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
+    "sns.set(font_scale=1.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e323afca-c4c3-415e-bd5c-8bff77da9ed3",
+   "metadata": {},
+   "source": [
+    "### Fitting and Visualizing a logistic Regression  \n",
+    "Goal is to predicts the probability of a binary outcome (0 or 1) for Diabetes diagnosis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd45058c-b817-49e2-b8ef-5cfddd6ff25b",
+   "metadata": {},
+   "source": [
+    "#### Get Data using my Prepare Data Class\n",
+    "will return these dataframe already cleaned and transformed\n",
+    "'menhealth','menhealth','physical','dietary','heart','sex','edu','all' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
+   "id": "5790eebe-4169-4d0e-beac-48ca8c24a70a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import my class with data.  setup in feature_engineering notebook\n",
+    "\n",
+    "from prepare import PrepareData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "99f35e13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "aurl = \"https://archive.ics.uci.edu/static/public/891/data.csv\"\n",
-    "df = pd.read_csv(url)\n",
-    "\n"
+    "#Testing - Read local data\n",
+    "prepared_data = PrepareData(download_new=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2519d2b8-7f78-438e-9bda-d64c35cb7085",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prepare_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mprepare_data\u001b[49m\u001b[38;5;241m.\u001b[39mrun()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prepare_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data = prepare_data.run()"
    ]
   },
   {
