--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -7,7 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### This is a linear regression problem used to determine the probability of diabetes based select features"
+    "### This is a logistic regression problem used to determine the probability of diabetes based select features"
    ]
   },
   {
