--- a/my_functions.ipynb
+++ b/my_functions.ipynb
@@ -462,11 +462,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bc936c16-5efc-4692-9cf2-5b4173400e61",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def graph_df(df, x, y):\n",
+    "       \"\"\"\n",
+    "       input:dataframe, x, y\n",
+    "       Returns\n",
+    "       -------\n",
+    "       graph\n",
+    "       \"\"\"\n",
+    "\n",
+    "       df = df[[x,y]]\n",
+    "       t = f'{x} vs {y}'\n",
+    "       # Calculate counts and percentages\n",
+    "       counts = df[[x, y]].value_counts()\n",
+    "       percentages = (counts / len(df)) * 100\n",
+    "\n",
+    "       # Create the bar chart\n",
+    "       plt.figure(figsize=(20, 6))\n",
+    "       ax = counts.plot(kind='bar')\n",
+    "\n",
+    "       # Add percentage labels\n",
+    "       for i, v in enumerate(counts):\n",
+    "           ax.text(i, v + 0.1, f'{v} ({percentages[i]:.1f}%)', ha='center', va='bottom')\n",
+    "\n",
+    "       plt.ylabel('Count')\n",
+    "       plt.xticks(fontsize=12)\n",
+    "       plt.title(t)\n",
+    "       plt.show()\n",
+    "       return plt"
+   ]
   },
   {
    "cell_type": "code",
