--- a/my_functions.ipynb
+++ b/my_functions.ipynb
@@ -189,12 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21b3b0b8-4082-4c93-ae58-7e43b9e61906",
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "def create_dataframe_from_counts(df, x, y):\n",
+    "    \"\"\"Creates a DataFrame from the counts and percentages of two columns.\n",
+    "\n",
+    "    Args:\n",
+    "        df: The original DataFrame.\n",
+    "        x: The first column to group by.\n",
+    "        y: The second column to group by.\n",
+    "\n",
+    "    Returns:\n",
+    "        A Pandas DataFrame containing counts, percentages, and the combined column.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    counts = df[[x, y]].value_counts().reset_index(name='count')\n",
+    "    counts.columns = [x, y, 'count']\n",
+    "    counts['percentage'] = (counts['count'] / len(df)) * 100\n",
+    "    counts['combined'] = counts[x] + ' vs ' + counts[y]\n",
+    "    return counts"
    ]
   },
   {
