--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -853,6 +853,9 @@
    "execution_count": null,
    "id": "5b33ea6e-f81f-4fa5-86d1-0e3f400a1879",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
